<resources>
    <string name="app_name">Money Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="value_hint">Value</string>
    <string name="name_hint">Name</string>
    <string name="action_delete_all">Clear All</string>
    <string name="date_hint">Date</string>
    <string name="average">Avg:</string>
    <string name="sum">Sum:</string>
    <string name="food_hint">Food</string>
    <string name="action_backup_db">Create backup</string>
    <string name="day_count">Days:</string>
    <string name="food">Food:</string>
    <string name="other">Other:</string>
    <string name="action_replace_db">Load new database</string>
    <string name="life">Life:</string>
    <string name="regular_text">Regu:</string>
    <string name="time_hint">Time</string>
    <string name="regular_hint">Regular</string>
    <string name="item_type">ItemType</string>
    <string name="outgoings_key">regular_outgoings</string>
    <string name="balance_key">balance</string>
</resources>
