<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_white_24px" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="64dp"
            android:gravity="center"
            android:scaleType="center"
            android:text="The Transaction"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFFFF"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="0"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_white_24px" />
    </LinearLayout>

    <EditText
        android:id="@+id/value_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/value_hint"
        android:inputType="numberDecimal|numberSigned"
        android:text="" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/name_hint"
        android:inputType="textEmailAddress"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_hint"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_hint"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/is_food"
            android:layout_weight="1"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/food_hint"
            android:text="" />

        <CheckBox
            android:id="@+id/is_regular"
            android:checked="false"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/regular_hint"
            android:text="" />
    </LinearLayout>


</LinearLayout>